--- a/less/carousel.less
+++ b/less/carousel.less
@@ -1,1 +1,8 @@
+.img{
+   width:100px;
+   height:100px;
 
+/*Scale down will take the necessary specified space that is 100px x 100px without stretching the image*/
+    object-fit:scale-down;
+
+}
