--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,21 @@
 /*
-@import "variables";
-@import "mixins";
-
 @import "reset";
 
-@import "global";
-
 */
+.myBtn {
+  background-color: #420000 !important;
+  width: 20% !important;
+  color: white !important;
+  cursor: pointer !important;
+  height: 45px !important;
+  font-size: 1rem !important;
+  text-align: center !important;
+  border-radius: 10px !important;
+}
+.myBtn:hover {
+  background-color: white !important;
+  color: #420000 !important;
+}
 .nav-color {
   background-color: #420000;
 }
@@ -15,9 +24,6 @@
   height: 100px;
   /*Scale down will take the necessary specified space that is 100px x 100px without stretching the image*/
   object-fit: scale-down;
-}
-button .right-side {
-  margin-left: 80%;
 }
 .featurette-divider {
   margin: 80px 0;
