--- a/css/index.css
+++ b/css/index.css
@@ -4,17 +4,44 @@
 */
 .myBtn {
   background-color: #420000 !important;
-  width: 20% !important;
+  width: 30% !important;
   color: white !important;
   cursor: pointer !important;
   height: 45px !important;
-  font-size: 1rem !important;
+  font-size: 0.9rem !important;
   text-align: center !important;
   border-radius: 10px !important;
+  transition: 0.3s !important;
 }
 .myBtn:hover {
   background-color: white !important;
   color: #420000 !important;
+}
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 100%;
+}
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.2rem;
+  padding-bottom: 10px;
+}
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+p {
+  line-height: 1.5;
+  font-size: 1.6rem;
+  padding-bottom: 10px;
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
 .nav-color {
   background-color: #420000;
