--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,9 +4,10 @@
     color: @font-color;
     cursor: pointer;
     height: 45px;
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-align: center;
     border-radius: 10px;
+    transition: 0.3s;
 
     &:hover {
         background-color: @font-color;
