--- a/less/featurettes.less
+++ b/less/featurettes.less
@@ -1,9 +1,8 @@
  .featurette-divider {
-  margin: 80px 0; /* <hr> between each */
+  margin: 2% 0; /* <hr> between each */
 }
  .featurette {
   padding: 5%;
-  padding-top: 2%;
   overflow: hidden; /* Clear floats */
 }
  .featurette-image {
