--- a/less/global.less
+++ b/less/global.less
@@ -5,10 +5,16 @@
   box-sizing: border-box;
 }
 
+
 html {
   font-size: 100%;
+  scroll-behavior: smooth !important;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 h1 {
   font-size: 4rem;
