--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,7 @@
 .custom-button(@bgcolor:teal, @font-color:white, @width:100%) {
     background-color: @bgcolor;
     width: @width;
+    height: 100%;
     color: @font-color;
     cursor: pointer;
     height: 45px;
