--- a/less/global.less
+++ b/less/global.less
@@ -1,5 +1,5 @@
 .myBtn {
-    .custom-button(@button-bg, white, 30%) !important;
+    .custom-button(@button-bg, #f6f6f6, 30%) !important;
 }
 * {
   box-sizing: border-box;
@@ -7,13 +7,16 @@
 
 
 html {
-  font-size: 100%;
-  scroll-behavior: smooth !important;
+  font-size: 80%;
+  scroll-behavior: smooth;
 }
 
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+}
+
+body {
 }
 
 h1 {
