--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,4 @@
-.myBtn {
-    .custom-button(@button-bg, #f6f6f6, 30%) !important;
-}
+
 * {
   box-sizing: border-box;
 }
@@ -46,3 +44,7 @@ img {
 
 
 
+footer {
+    background-color: @button-bg;
+    color: @bg-white;
+}
