--- a/less/index.less
+++ b/less/index.less
@@ -15,11 +15,12 @@
 
 
 @import "navigation";
+@import "buttons";
 @import "carousel";
 @import "featurettes";
 @import "team-members";
-/*
 
 @import "footer";
+/*
 @import "home-page";
 */
