--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,9 @@
 //Colors
 
 @bg-color: #420000;
+@bg-white: #f6f6f6;
+@bg-grey: #d4d7dd;
 
 //Media Queries
 @mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 800px)";
